2003-12-12  Xavier Ordoquy <xordoquy@wanadoo.fr>

	* data/ui/Makefile.am:
	* src/Makefile.am:
	Added the files needed by time table when configured with.

	* src/planner-ttable-chart.c:
	* src/planner-ttable-chart.h:
	* src/planner-ttable-model.c:
	* src/planner-ttable-model.h:
	* src/planner-ttable-print.c:
	* src/planner-ttable-print.h:
	* src/planner-ttable-row.c:
	* src/planner-ttable-row.h:
	* src/planner-ttable-tree.c:
	* src/planner-ttable-tree.h:
	* src/planner-ttable-view.c:
	Added copyrights, remove C++ comments and debugging output
	try to start cleaning up the code.

2003-12-12  Richard Hult  <richard@imendio.com>

	* data/glade/project-properties.glade:
	* src/planner-project-properties.c: Undo for most of the stuff,
	and get rid of the sucky gnome-date-edit widget. Don't perform
	changes on "changed", do it on focus out instead.

	* libplanner/mrp-property.c: Fix comment.

	* data/glade/project-properties.glade:
	* src/planner-project-properties.c: Close the calendar selector
	window. Tweak a bit, fix a few UI inconsistencies, remove dialog
	separators.

2003-12-11  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c (task_tree_duration_edited) 
	(task_tree_work_edited): Undo support.

	* data/glade/calendar-dialog.glade: Remove unnecessary string.
	
	* libplanner/mrp-project.c: (project_do_save),
	(project_load_from_sql): Update strings.
	
	* src/planner-marshal.list:
	* src/planner-cmd-manager.c: 
	* src/planner-window.c: (window_undo_state_changed_cb),
	(window_redo_state_changed_cb): Set the labels for undo/redo to
	a string including the name of the command.

	* src/planner-task-tree.c: (task_cmd_insert),
	(task_cmd_edit_property), (planner_task_tree_insert_subtask),
	(planner_task_tree_insert_task): Implement undo for insert
	subtask.

2003-12-11  Richard Hult  <richard@imendio.com>

	* Makefile.am: Fix distcheck.
	* libplanner/mrp-xsl.c: (html_write): Tweak.
	* src/planner-html-plugin.c: