@@ -55,27 +55,27 @@ enum {
 	NUM_COLS
 };
 
-GType              planner_ttable_model_get_type              (void);
-PlannerTtableMode *planner_ttable_model_new                    (MrpProject *project);
+GType               planner_ttable_model_get_type               (void);
+PlannerTtableModel *planner_ttable_model_new                    (MrpProject *project);
 
-GtkTreePath       *planner_ttable_model_get_path_from_resource (PlannerTtableModel *model,
-								MrpResource        *resource);
-MrpProject        *planner_ttable_model_get_project            (PlannerTtableModel *model);
-MrpAssignment     *planner_ttable_model_get_assignment         (PlannerTtableModel *model,
-								GtkTreeIter        *iter);
-MrpResource       *planner_ttable_model_get_resource           (PlannerTtableModel *model,
-								GtkTreeIter        *iter);
-gboolean           planner_ttable_model_is_resource            (PlannerTtableModel *model,
-								GtkTreeIter        *iter);
-gboolean           planner_ttable_model_is_assignment          (PlannerTtableModel *model,
-								GtkTreeIter        *iter);
-MrpAssignment     *planner_ttable_model_path_get_assignment    (PlannerTtableModel *model,
-								GtkTreePath        *path);
-MrpResource       *planner_ttable_model_path_get_resource      (PlannerTtableModel *model,
-								GtkTreePath        *path);
-gboolean           planner_ttable_model_path_is_resource       (PlannerTtableModel *model,
-								GtkTreePath        *path);
-gboolean           planner_ttable_model_path_is_assignment     (PlannerTtableModel *model,
-								GtkTreePath        *Path);
+GtkTreePath        *planner_ttable_model_get_path_from_resource (PlannerTtableModel *model,
+								 MrpResource        *resource);
+MrpProject         *planner_ttable_model_get_project            (PlannerTtableModel *model);
+MrpAssignment      *planner_ttable_model_get_assignment         (PlannerTtableModel *model,
+								 GtkTreeIter        *iter);
+MrpResource        *planner_ttable_model_get_resource           (PlannerTtableModel *model,
+								 GtkTreeIter        *iter);
+gboolean            planner_ttable_model_is_resource            (PlannerTtableModel *model,
+								 GtkTreeIter        *iter);
+gboolean            planner_ttable_model_is_assignment          (PlannerTtableModel *model,
+								 GtkTreeIter        *iter);
+MrpAssignment      *planner_ttable_model_path_get_assignment    (PlannerTtableModel *model,
+								 GtkTreePath        *path);
+MrpResource        *planner_ttable_model_path_get_resource      (PlannerTtableModel *model,
+								 GtkTreePath        *path);
+gboolean            planner_ttable_model_path_is_resource       (PlannerTtableModel *model,
+								 GtkTreePath        *path);
+gboolean            planner_ttable_model_path_is_assignment     (PlannerTtableModel *model,
+								 GtkTreePath        *Path);
 
 #endif //__PLANNER_TTABLE_MODEL_H__
