@@ -1,5 +1,14 @@
 2003-12-12  Xavier Ordoquy <xordoquy@wanadoo.fr>
 
+	* src/planner-ttable-model.h: typo
+
+	* src/planner-ttable-tree.c:
+	* src/planner-ttable-tree.h:
+	* src/planner-ttable-view.c:
+	PlannerMainWindow has been renamed PlannerWindow.
+
+2003-12-12  Xavier Ordoquy <xordoquy@wanadoo.fr>
+
 	* data/ui/Makefile.am:
 	* src/Makefile.am:
 	Added the files needed by time table when configured with.
